@@ -27,5 +27,5 @@ DIST vmware-libssl.so.0.9.7l.tar.bz2 78244 RMD160 195dd4808e60f81621e6ed12b843de
 DIST vmware-server-perl-fixed-rpath-libs.tar.bz2 73834 RMD160 7f64627b5b945e8d7dabe39c165a4b66b71fb4d3 SHA1 9d696750ca3ec92b31ca8112fd80dcd832494044 SHA256 c42299dd033187c67b45b739da66583fbd94cdcba745200b89a25ac96cd9364b
 EBUILD vmware-server-1.0.4.56528.ebuild 3262 RMD160 d3616d549aba38df8b4a46a842811efa571a532c SHA1 e2fa8048a772371398dda1effbedf4169564a03a SHA256 a2f388b163e82b66ef130ea9632c817c967ae60fdc01cab2b2522b18276121f4
 EBUILD vmware-server-1.0.5.80187.ebuild 3004 RMD160 5c1c3ab03afae41541d94e861f073926d8267a3f SHA1 364c93e0820f4efd2327d6cbae02d0ef29657592 SHA256 f0c17110f565620884d4432dbfc1fe15bf355acb93f95aac6a07575d187c3232
-EBUILD vmware-server-2.0.0.84186.ebuild 2589 RMD160 7652325be99087b9d5d683ae8b67081038cdc309 SHA1 11fce7be8595b5dda2820822da3e9e9dc8927d1c SHA256 4dfbb2ed7dd25008480445dc45bfe61635652123e5a3e526b1df636cee8cd0ae
+EBUILD vmware-server-2.0.0.84186.ebuild 2503 RMD160 ad99fb421878c5719f22429eb383caf611258f4e SHA1 3026cb6f95d9aaf0be099435f4938d5a8e341236 SHA256 8728c14199d7184e5e5de2541fda2911ddf50d3a187bf9540f4f9e9361d574ff
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
